--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
 				<h2 class="timeline-time"><span>2016年10月</span></h2>
 				<dl class="timeline-series">
 					<span class="tick tick-before"></span>
-					<dt id="20161003" class="timeline-event"><a>国庆奉节（10月3日- 10月6日）</a></dt>
+					<dt id="20161003" class="timeline-event"><a>国庆奉节（10月3日 - 10月6日）</a></dt>
 					<span class="tick tick-after"></span>
 					<dd class="timeline-event-content" id="20161003EX">
 						<img src="img/guoqingfengjie.jpg"><br><br>	
@@ -240,7 +240,36 @@
 						</div><!-- /.media -->						
 						<p> 就在这一天晚上，我（余莉莉）乱七八糟乱说了些话，惹得神经病（袁源）无语加不高兴加生气！第二天跟我问好，咦，不理我（内心还是蛮伤心滴），心想给我等着你不理我我也不理你，看谁拗得过……哈哈…… </p>				
 					<br class="clear">
-					</dd><!-- /.timeline-event-content -->					
+					</dd><!-- /.timeline-event-content -->			
+
+					<span class="tick tick-before"></span>
+					<dt id="20161030" class="timeline-event"><a>一段意义深远的行程（10月30日 - 11月1日）</a></dt>
+					<span class="tick tick-after"></span>
+					<dd class="timeline-event-content" id="20161030EX">	
+						<div class="media">
+						<img src="img/xingcheng.jpg"><br><br>
+						</div><!-- /.media -->						
+						<p>得知阿姨遭遇交通事故，我们都很着急。匆忙决定一同前往探望阿姨。不幸中的万幸，没有太大问题，需要的是时间来恢复。我们也就放心了些。</p>
+						<p>此行算是第一次正式见家长，只是没想到是在这种场景下见面。尽管如此，能得到阿姨、舅舅等亲人对我的认可，很感动、很开心、很满足。</p>
+						<p>因此，我萌生了结婚的想法。这里你肯定会问我为什么，我就列个12345678910出来：</p>
+						<p>&nbsp;&nbsp;&nbsp;&nbsp;1.你年轻，年轻就是资本，我们的未来有很长的路需要去经历，值得期待，值得向往。</p>
+						<p>&nbsp;&nbsp;&nbsp;&nbsp;2.你漂亮，就是这么让我白看不厌，越看越喜欢。</p>
+						<p>&nbsp;&nbsp;&nbsp;&nbsp;3.你阳光，充满活力，还有一双美丽的大眼睛。带给我温暖和幸福。</p>
+						<p>&nbsp;&nbsp;&nbsp;&nbsp;4.你直爽，上一秒有说有笑，下一秒就直接翻脸。让我内心70上80下，跟过山车似的。</p>
+						<p>&nbsp;&nbsp;&nbsp;&nbsp;5.你单纯，不是心机女，不是腹黑女。有时候傻傻的很可爱。</p>
+						<p>&nbsp;&nbsp;&nbsp;&nbsp;6.你重情，从不轻易选择，也不轻易放弃。值得相守一生。</p>
+						<p>&nbsp;&nbsp;&nbsp;&nbsp;7.你善良，从你对朋友、亲人的态度看出，即使有所不满也能为他人着想。</p>
+						<p>&nbsp;&nbsp;&nbsp;&nbsp;8.你孝顺，表面上你很大大咧咧，实际上你潜藏着一颗孝心。可谓百善孝为先。</p>
+						<p>&nbsp;&nbsp;&nbsp;&nbsp;9.你聪明，做事很有分寸，知道什么时候该做什么不该做什么。社会关系处理很到位。</p>
+						<p>&nbsp;&nbsp;&nbsp;&nbsp;10.你善变，时而豪爽，时而温柔，时而可爱，时而淘气，时而聪明，时而傻气，各种滋味耐人寻味。</p>
+						<p>我同样孝顺、善良、谦和、重情，也年轻，帅气，大方，更懂得包容，爱护和责任。</p>
+						<p>你虐我千百遍，我享乐其中，我真生气时，你又懂得收敛。这又何尝不是一种相爱的体现呢？</p>
+						<p>我们的感情是纯粹的，是浓厚的。没有不同的信仰，也没有不可调和的原则冲突。在一起时轻松快乐，分开时相思相守。</p>
+						<p>我们若结婚，不是为了冲动的结果而买单，只因相爱！</p>
+						<p>我们若结婚，定是一切美好的起步！</p>
+						<p>我们若结婚，注定相守一生！</p>
+					<br class="clear">
+					</dd><!-- /.timeline-event-content -->						
 				</dl>
 			</div>				
 
