--- a/index.html
+++ b/index.html
@@ -274,6 +274,35 @@
 			</div>				
 
 			<div class="timeline-wrapper">
+				<h2 class="timeline-time"><span>2016年11月</span></h2>
+				<dl class="timeline-series">
+					<span class="tick tick-before"></span>
+					<dt id="20161111" class="timeline-event"><a>千里之外与你相会（11月11日 - 11月13日）</a></dt>
+					<span class="tick tick-after"></span>
+					<dd class="timeline-event-content" id="20161111EX">
+						<div class="media">
+							<img src="img/20161111.jpg"><br><br>
+						</div><!-- /.media -->	
+						<p>距离上次见面已经过了10天，但这十天是真的就像过了10年一般。所以我决定再次远赴千里去看你，这次我选择了经济实惠的方式过去，辗转几次总算见到了。</p>
+						<p>感觉就像回家一样，妈妈、妹妹、还有伯伯都很热情，这种感觉真的很好。</p>
+						<p>最重要的是，我夺走了你的初吻！！！！尽管瞬间即逝，而且很生涩。却也回味无穷！</p>
+					<br class="clear">
+					</dd><!-- /.timeline-event-content -->
+					
+					<span class="tick tick-before"></span>
+					<dt id="20161115" class="timeline-event"><a>讨论结婚领证相关事宜（11月15日）</a></dt>
+					<span class="tick tick-after"></span>
+					<dd class="timeline-event-content" id="20161115EX">
+						<p>第二次跟爸爸通电话，但却依然无法叫出口喊爸爸。爸爸同意我俩的婚事，一切的事情都说好商量。让我真的很感动！</p>
+						<p>然后具体的细节在跟妈妈通电话后也基本已经确定。最近感觉自己整个人都飘起来了，太幸福，太高兴了。就像是梦境一样！</p>
+						<p>真的就要娶你为妻了，除了激动外我也衍生除了一种强烈的责任感。</p>
+					<br class="clear">
+					</dd><!-- /.timeline-event-content -->					
+					
+				</dl>
+			</div>			
+
+			<div class="timeline-wrapper">
 				<h2 class="timeline-time"><span>亘古不变</span></h2>
 				<dl class="timeline-series">
 					<span class="tick tick-before"></span>
