--- a/index.html
+++ b/index.html
@@ -314,6 +314,20 @@
 						<p>［想对您说：“妈，我爱您！您辛苦了！”］</p>
 					<br class="clear">
 					</dd><!-- /.timeline-event-content -->
+					
+					<span class="tick tick-before"></span>
+					<dt id="20161212" class="timeline-event"><a>潜移默化的改变（12月12日）</a></dt>
+					<span class="tick tick-after"></span>
+					<dd class="timeline-event-content" id="20161212EX">
+						<img src="img/20161212.jpg"><br><br>					
+						<p>双十一过去了，双十二又来了！</p>
+						<p>别人购物狂欢，我们也是自得其乐。没想到你居然偷偷给我买了一条皮带，想要给我惊喜。结果还是被我发现端倪。。哈哈</p>
+						<p>同样，我也带去了好消息。租到了合适的房子，算是为以后在一起做好了最基本的准备。。期待你的入住！</p>
+						<p>人逢喜事精神爽，一言不和。就忍不住让红包分了一会儿，哈哈。</p>
+						<p>一种被认可的感觉从此诞生了，主动给我买礼物，想要给我惊喜，为了我跟亲人翻脸，愿意将我们得事迹分享给亲友。</p>
+						<p>幸福满满，做什么都值</p>
+					<br class="clear">
+					</dd><!-- /.timeline-event-content -->
 				</dl>
 			</div>				
 
