--- a/index.html
+++ b/index.html
@@ -327,7 +327,60 @@
 						<p>一种被认可的感觉从此诞生了，主动给我买礼物，想要给我惊喜，为了我跟亲人翻脸，愿意将我们得事迹分享给亲友。</p>
 						<p>幸福满满，做什么都值</p>
 					<br class="clear">
+					</dd><!-- /.timeline-event-content -->		
+					
+					<span class="tick tick-before"></span>
+					<dt id="20161214" class="timeline-event"><a>2017年是瑞年？(12月14日)</a></dt>
+					<span class="tick tick-after"></span>
+					<dd class="timeline-event-content" id="20161214EX">
+						<img src="img/20161212.jpg"><br><br>					
+						<p>跟妈无意中电话聊天中得知2017年是瑞年，老家有很多人在传，说什么瑞年结婚不好。</p>
+						<p>其实当时我听了这话是没怎么在意的，毕竟我们年轻人不怎么在意这个。但是我还是把这个消息转达给你了。</p>
+						<p>嘿嘿，没想到你居然也觉得有点儿在意这事儿。让我觉得机会来了，可以加快进程啦，可以不用再煎熬太久啦！</p>
+						<p>于是我在一旁扇风点火、添油加醋、苦口婆心的表达了我的想法（提前回家领证！！！！！）。</p>
+						<p>简直了。。。。。奇迹般的速度，太神奇了。</p>
+						<p>事情居然进展的如此之快。。。。我都缓不过神来了----允许我歇歇，太激动了。</p>
+						<p>当天我就跟莉莉大体把这个事情协商了一下，接着就跟老丈人打电话沟通这个事情。没想到老丈人也是如此开明之人</p>
+						<p>都没见过我和我的父母的前提下，居然同意我们先行回家领证。。。。。。。</p>
+						<p>真是受宠若惊。我带着满心的激动，狂热，兴奋，欢快的心情（见谅我找不到好的形容词了，总之是无法形容的美好）确定着行程</p>
+						<p>同时又一路高歌，继续诱导。总算是把你骗到了我的贼船上了————让其改道跟我一同回家，哈哈!</p>
+						<p>嘘！这事儿仅有少数人知道，一般人我不告诉他。</p>
+						<p>哎，唯一美中不足的是我跟老丈人表述的方式有问题，把责任说到了莉莉身上。我很惭愧！</p>
+					<br class="clear">
 					</dd><!-- /.timeline-event-content -->
+				
+					<span class="tick tick-before"></span>
+					<dt id="20161217" class="timeline-event"><a>我在超市，你需要点儿啥？（12月17日）</a></dt>
+					<span class="tick tick-after"></span>
+					<dd class="timeline-event-content" id="20161217EX">
+						<img src="img/20161217.jpg"><br><br>					
+						<p>这天是周六的早晨，早早的去体检完之后就溜近了一家超市给你买生活用品。</p>
+						<p>我记得很清楚，当时也没买几件，基本上都是你在线陪着我挑选商品的。</p>
+						<p>沐浴露，浴球，牙刷，水杯，毛巾，家居鞋，口罩，垃圾桶，垃圾袋，香皂盒，洗发露，等等。。</p>
+						<p>最难为情的两件事情：</p>
+						<p>1.我打算给你买姨妈巾的，结果转了几圈还是不知道哪种，搞的导购员都对我另眼相看了。</p>
+						<p>2.本想买点儿安全套，结果在偌大的超时转了好几圈，居然没找到在哪你卖，我又不好意思问。结果就。。。</p>
+						<p>东西不多，也装了满满一小袋子。这是我所有购物中最愉快的一次了，还是我一个人逛的。</p>
+						<p>因为里边都是你需要用到的物品，我真的很高兴，兴匆匆的就拎着回了家。</p>
+						<p>还记得你当时跟我说的话是："神经病，我突然觉得好尴尬啊","不好意思啊。。。","太不好意思了","我现在整个人都是飘起的"</p>
+					<br class="clear">
+					</dd><!-- /.timeline-event-content -->		
+
+					<span class="tick tick-before"></span>
+					<dt id="20161223" class="timeline-event"><a>新房子就要入住女主人啦!（12月23日）</a></dt>
+					<span class="tick tick-after"></span>
+					<dd class="timeline-event-content" id="20161223EX">
+						<img src="img/20161223.jpg"><br><br>					
+						<p>经过一周的等待，你终于要在今天，从遥远的千里之外，来到我的身边！</p>
+						<p>你从高兴，害羞，尴尬，不好意思，飘起的各种状态转变到激动，期待，害怕，纠结，和默许的状态</p>
+						<p>我始终如一的等待，距离见面的时间越是逼近，我也越是激动。</p>
+						<p>晚上21点30，我手捧鲜花，满心期待，在北京南站等待你的到来。</p>
+						<p>本以为有一个大大的拥抱呢，结果小小失望下。</p>
+						<p>不过这很快就忘了，因为你的到来我真的很兴奋。</p>
+						<p>太晚了，我俩喝了碗粥，吃了点儿东西。然后。。。你就成了我的人啦，嘿嘿！</p>
+					<br class="clear">
+					</dd><!-- /.timeline-event-content -->						
+			
 				</dl>
 			</div>				
 
