--- a/index.html
+++ b/index.html
@@ -379,10 +379,72 @@
 						<p>不过这很快就忘了，因为你的到来我真的很兴奋。</p>
 						<p>太晚了，我俩喝了碗粥，吃了点儿东西。然后。。。你就成了我的人啦，嘿嘿！</p>
 					<br class="clear">
-					</dd><!-- /.timeline-event-content -->						
+					</dd><!-- /.timeline-event-content -->		
+
+					<span class="tick tick-before"></span>
+					<dt id="20161225" class="timeline-event"><a>袁总向我求婚（12月25日）</a></dt>
+					<span class="tick tick-after"></span>
+					<dd class="timeline-event-content" id="20161225EX">
+						<img src="img/qiuhun.jpg"><br><br>					
+						<p>按照计划本来不应该那么快回家领证的， 不过为了我们美好的未来，我应该做出这个伟大决定！</p>
+						<p>本来这个时间应该在老家， 却偷偷地跑到了北京。</p>
+						<p>就在今天和昨天，某人的某些小动作，如此聪明的我竟然没猜透，哈哈！</p>
+						<p>直到去叫朋友吃饭，门打开那一瞬间，我的眼睛看到了一直很的期待求婚（好惊喜）</p>
+						<p>我的心不由自主感动得流着喜泪（激动）</p>
+						<p>脸上充满幸福的味道（高兴）</p>
+						<p>然而一直口齿伶俐的那张嘴却说不出话来了。（尽管向我求婚的时候是一枚钥匙圈）</p>
+						<p>一亿个：我愿意！我爱你！</p>
+					<br class="clear">
+					</dd><!-- /.timeline-event-content -->					
 			
+					<span class="tick tick-before"></span>
+					<dt id="20161230" class="timeline-event"><a>爱情得到了法律的保护（12月30日）</a></dt>
+					<span class="tick tick-after"></span>
+					<dd class="timeline-event-content" id="20161230EX">
+						<img src="img/lingzheng.jpg"><br><br>					
+						<p>很多人说婚姻是爱情的坟墓，我却不敢苟同。</p>
+						<p>我认为我们两个人的感情正好相反，婚姻将是我们爱情长跑的开始。</p>
+						<p>为什么这么说呢？我们从认识到领证见面的次数屈指可数。</p>
+						<p>我们没有太多的相处时间，没有太多柴米油盐的日子，也没有太多深刻的经历。</p>
+						<p>即便是这样，我们还是领证了。没有强迫，没有委屈，没有不甘。</p>
+						<p>我想这是我们的选择，是我们对爱最切实有效的承诺。</p>
+						<p>这将意味着，在很短的时间内相爱，需要用很长很长的时间去相守！</p>
+						<p> </p>
+						<p>这也是我们目前为止所经历的最折腾的一天，最辛苦的一天，最快乐的一天，最激动人心的一天。</p>
+						<p>当天凌晨1点到家（从北京回来），早上四点起床出发去忠县民政局（中途也是几经折腾，先去菜园坝车站路上因为司机临时变化加价，差点儿跟司机动手了。到了车站居然没车，辗转到龙头寺车站，因为人多又选择了坐了黑车，中途为了躲避交警还下车走了一段路。）
+						</p>
+						<p>紧赶慢赶总算在中午12点的时候赶到了民政局。结果政府部门的大爷们都要下班了。</p>
+						<p>好说歹说,最后一哥们很不情愿的还是答应了。</p>
+						<p>我们先是拍照（照片丑），然后填写资料签名，然后拿到结婚证，最后是去宣誓！</p>
+						<p>2016年12月30日上午最后一对新人等结婚手续诞生）。</p>
+						<p>下午从忠县到丰都去拿东西，因为太晚没车，打车过去。晚上又从丰回家，到家已经又是第二个凌晨了。</p>
+						<p>我希望我们俩能一直一直一直做到，互相信任，相爱相守，不离不弃！欧耶！</p>
+					<br class="clear">
+					</dd><!-- /.timeline-event-content -->			
+										
 				</dl>
 			</div>				
+			
+			<div class="timeline-wrapper">
+				<h2 class="timeline-time"><span>2017年01月</span></h2>
+				<dl class="timeline-series">
+					<span class="tick tick-before"></span>
+					<dt id="20170107" class="timeline-event"><a>经余董同意上北京视察工作（01月07日）</a></dt>
+					<span class="tick tick-after"></span>
+					<dd class="timeline-event-content" id="20170107EX">					
+					<div class="media">
+					<img src="img/shichagongzuo.jpg" alt="">
+					</div><!-- /.media -->					
+						<p>一大早起来正洗着衣服，  跟老公接着电话，向老爸请示了一哈我要去北京玩。</p>
+						<p> 结果老爸爽快的答应了，我还以为他不同意呢…</p>
+						<p>我那老公呢， 当时听见了别提多高兴了，那叫一个激动（别不承认）！</p>
+						<p>赶紧的订票， 越快越好，生怕我反悔似的……  哈哈。</p>
+						<p> 就这样， 我就正大光明的踏上了去北京的行程！我内心也还是蛮高兴的。 嘿嘿！</p>
+					<br class="clear">
+					</dd><!-- /.timeline-event-content -->
+					
+				</dl>
+			</div>			
 
 			<div class="timeline-wrapper">
 				<h2 class="timeline-time"><span>亘古不变</span></h2>
